# CoH

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  config.h.in  configure  configure.ac
beoh/: ENSDFsplit.pl  Makefile.am  Makefile.in  beoh.cpp  beoh.h  beohdataread.cpp  beohdummy.cpp  beohensdf.cpp  beohffrag.cpp  beohffrag.h  beohffragbeta.cpp  beohffragcalc.cpp  beohffragdecay.cpp  beohffragenergy.cpp  beohlabspectrum.cpp  beohmain.cpp  beohneutrino.cpp  beohomcalc.cpp  beohoutput.cpp  beohoutput.h  beohpopinit.cpp  beohprofile.cpp  beohsetup.cpp  beohspecmc.cpp  beohspectra.cpp  beohstat.h  betachain.h  ffp.h  ffpmultichance.cpp  ffpmultichance.h  ffpoutput.cpp  ffpparameter.cpp  ffpyield.cpp  ffpyieldread.cpp  fobs.h  mt19937ar.c  wahl.cpp
document/: cohlogo.xcf  compound.html  custom.html  direct.html  example.html  index.html  input.html  install.html  introduction.html  optical.html  option.html  output.html  structure.html  style.css  tweak.html  usage.html
omplib/: Makefile.in
source/: FRDM.h  FRDMcoordinate.h  FRDMfileout.cpp  FRDMmacroenergy.cpp  FRDMmacrointegral.cpp  FRDMmacroshapedepend.cpp  FRDMmain.cpp  FRDMmicroenergy.cpp  FRDMpairing.cpp  HF.h  (+165 more)
source/omplib/: Makefile.am  Makefile.in  an.cpp  avrigeanu.cpp  becchetti.cpp  bojowald.cpp  bound.cpp  ch89.cpp  dave1p.cpp  flap.cpp  han.cpp  koning.cpp  kunieda.cpp  lemos.cpp  madland.cpp  nolte.cpp  omplib.h  perey.cpp  rapaport.cpp  scratch.cpp  smith.cpp  soukhovitskii.cpp  spline.cpp  talys_alpha.cpp  test.cpp  walter.cpp  wilmore.cpp  wlh.cpp  young.cpp
(+3 files in other folders)
