noinst_LIBRARIES = libomp.a
libomp_a_SOURCES = \
	omplib.h \
	an.cpp \
	avrigeanu.cpp \
	becchetti.cpp \
	bojowald.cpp \
	bound.cpp \
	ch89.cpp \
	dave1p.cpp \
	flap.cpp \
	han.cpp \
	koning.cpp \
	kunieda.cpp \
	lemos.cpp \
	madland.cpp \
	nolte.cpp \
	perey.cpp \
	rapaport.cpp \
	scratch.cpp \
	soukhovitskii.cpp \
	spline.cpp \
	smith.cpp \
	talys_alpha.cpp \
	test.cpp \
	walter.cpp \
	wilmore.cpp \
	young.cpp

AM_CXXFLAGS = \
	-g -Wall -O3 -Wextra
